--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
 
     <body>
-
+        <div class="pokedex-container">
+            <h1>Pok&#233Dex</h1>
+            <ul class="pokedex-list"></ul>
+        </div>
         <script src="js/scripts.js"></script>
     </body>
 </html>
