--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <h1>Pok&#233Dex</h1>
             <ul class="pokedex-list"></ul>
         </div>
+        <script src="js/polyfill.min.js"></script>
+        <script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
