Implemented loading animation
Likely to be removed in future versions, fairly distracting in use

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
 
     <body>
+        <div class="loader loader-pokeball"></div>
+
         <div class="pokedex-container">
             <h1>Pok&#233Dex</h1>
             <ul class="pokedex-list"></ul>
