--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <div class="loader loader-pokeball"></div>
-
+        <div id="modal-container"></div>
         <div class="pokedex-container">
             <h1>Pok&#233Dex</h1>
             <ul class="pokedex-list"></ul>
