--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
 </head>
 
 <body>
@@ -72,10 +72,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-    <script src="src/js/polyfill.min.js"></script>
-    <script src="src/js/fetch.umd.js"></script>
-    <script src="src/js/string-array-polyfill.js"></script>
-    <script src="src/js/scripts.js"></script>
+    <script src="dist/js/polyfill.min.js"></script>
+    <script src="dist/js/fetch.umd.min.js"></script>
+    <script src="dist/js/string-array-polyfill.min.js"></script>
+    <script src="dist/js/scripts.min.js"></script>
 </body>
 
 </html>
